# scintilla-qt

./: README.md
scintilla/: CMakeLists.txt
